# CompPhysFWK

./: CMakeLists.txt  FindAllegro.cmake  README.md
cmake_modules/: FindGnuplotIOStream.cmake
src/: CMakeLists.txt  example_fdtd_2dite.cpp  example_fdtd_2dite.hpp  example_fdtd_2nd_mur.cpp  example_fdtd_2nd_mur.hpp  example_fdtd_difint.cpp  example_fdtd_foton.cpp  example_fdtd_lense.cpp  example_fdtd_minimal.cpp  example_fdtd_resonator.cpp  example_visual_gnuplot.cpp  test_concept.cpp  test_gnuplot.cpp
src/examples/: CMakeLists.txt  example_fdtd_2dite.cpp  example_fdtd_2nd_mur.cpp  example_fdtd_difint.cpp  example_fdtd_foton.cpp  example_fdtd_lense.cpp  example_fdtd_minimal.cpp  example_fdtd_resonator.cpp  example_visual_gnuplot.cpp
src/examples/adq/: oscilloscope_adaptor.hpp  redpitaya.cpp  scpi_cli.hpp
src/examples/dsp/: CMakeLists.txt  pipeline.cpp
src/examples/dsp_basics/: CMakeLists.txt  dummy_pipeline.cpp  inverse_rc_filter.cpp  tareas.txt
src/examples/fdtd/: 2dite.cpp  CMakeLists.txt  diafragm.cpp  example_visual_gnuplot.cpp  foton.cpp  lense.cpp  minimal.cpp  mur_2nd.cpp  resonator.cpp
src/examples/gsl_basics/: CMakeLists.txt  differentiation.cpp  homogen.cpp  integration.cpp
src/examples/net_basics/: CMakeLists.txt  redpitaya.cpp  redpitaya_2.cpp  redpitaya_scpi.cpp  scpi_cli.hpp
src/examples/num/: CMakeLists.txt  differentiation.cpp  inout.cpp  integration.cpp  numerov.cpp  root_localize.cpp  schrodinger_shoot.cpp  static_taylor.cpp
src/lib_dist/: pipeline.hpp  swp_fifo.hpp
src/lib_dsp/: filters.hpp  oscilloscope_adaptor.hpp  pipeline.hpp  routines.hpp  signal.hpp  sources.hpp  uncasual.hpp
src/lib_fdtd/: container.hpp  leapfrog.hpp  lib_fdtd.h  optics.hpp  source.hpp  yee_cell.hpp
src/lib_fdtd/advanced/: example_fdtd_2dite.hpp  example_fdtd_2nd_mur.hpp
src/lib_fdtd/diplay/: em_field_intensity_display.hpp  log_energy_density_display.hpp
src/lib_num/: numerov.hpp  root_localize.hpp
src/lib_visual/: gnuplot.hpp  gnuplot_iostream.hpp  lib_visual.h  oscillosope.hpp  renderer.hpp  window.hpp
src/utils/: CMakeLists.txt  faddeeva.cpp  gnuplot_iostream.hpp  ieee754_1985.hpp  performance.hpp
